Add team MOTD feature with commands and config
Introduces support for team MOTDs, including new commands to set and disable the MOTD, configuration options for enabling, color usage, and length limits, and new messages for MOTD-related feedback. Updates the team info display to show the MOTD if enabled. Cleans up unused imports across many command and event classes.

#100